# frostgate-circuits

./: Cargo.toml  README.md  build.rs
circuits/: Cargo.toml  block_verify.rs  message_verify.rs  tx_verify.rs
docs/: design.md  migration.md
programs/: message_verifier.sp1
src/: error.rs  lib.rs  main.rs  sp1_plug.rs
src/groth16/: mod.rs
src/halo2/: mod.rs
src/risc0/: backend.rs  cache.rs  circuit.rs  mod.rs  tests.rs  types.rs
src/sp1/: README.md  backend.rs  cache.rs  circuit.rs  mod.rs  plug.rs  prover.rs  tests.rs  types.rs  utils.rs  verifier.rs
