[package]
name = "frostgate-circuits"
version = "1.0.0"
edition = "2021"
description = "Zero-knowledge circuit implementations for Frostgate"
license = "MIT OR Apache-2.0"

[dependencies]
frostgate-zkip = { path = "../frostgate-zkip", default-features = false }
sp1-zkvm = { version = "5.0.0", default-features = false }
sp1-core = { version = "0.0.2-test", default-features = false }
sp1-prover = { version = "5.0.0", default-features = false }
sp1-sdk = { version = "5.0.0", features = ["network"], default-features = false }
async-trait = { version = "0.1", default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }
parking_lot = "0.12"
bincode = { version = "1.3", default-features = false }
hex = { version = "0.4", default-features = false }
thiserror = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
num_cpus = { version = "1.16", default-features = false }
lru = { version = "0.12", default-features = false }

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1.0"
tempfile = "3.8"
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "frostgate-zkip/std",
    "tokio",
    "hex/std",
    "tracing/std",
]
