[package]
name = "frostgate-circuits"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge circuit implementations for Frostgate"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
sp1-core-executor = "5.0.0"
sp1-core-machine = "5.0.0"
sp1-zkvm = "5.0.0"
sp1-prover = "5.0.0"
sp1-sdk = { version = "5.0.0", features = ["network"] }
risc0-zkvm = "0.19"
sha2 = "0.10"
rayon = "1.8.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
lru = "0.12.1"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.7.0", features = ["v4"] }
hex = { version = "0.4.3", features = ["serde"] }
p3-maybe-rayon = "0.1.3-succinct"
frostgate-zkip = { path = "../frostgate-zkip" }
tracing = "0.1"
tokio = { version = "1.36.0", features = ["full"], optional = true }
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.8"

[features]
default = ["std"]
std = [
    "frostgate-zkip/std",
    "tokio",
    "hex/std",
    "tracing/std",
]
