[package]
name = "frostgate-risc0-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.19", default-features = false }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[[bin]]
name = "message_verify"
path = "message_verify.rs"

[[bin]]
name = "tx_verify"
path = "tx_verify.rs" 